--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -297,6 +297,35 @@
 
         </LinearLayout>
 
+
+
+        <LinearLayout
+            android:id="@+id/llFloatingNav"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:padding="5dp">
+
+            <com.airbnb.lottie.LottieAnimationView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                app:lottie_colorFilter="@color/white"
+                app:lottie_autoPlay="true"
+                app:lottie_fileName="item.json"
+                app:lottie_loop="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Floating Bottom Nav"
+                android:textStyle="bold"
+                android:textSize="16dp"
+                android:textColor="@color/white"
+                android:layout_marginLeft="5dp" />
+
+        </LinearLayout>
+
     </com.nilprojects.androiduidesign.ExpandableLayout>
 
 
