--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -749,7 +749,7 @@
             <com.nilprojects.androiduidesign.ExpandableLayout
                 android:id="@+id/expandableLayoutPager"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/expandableViewHeight"
+                android:layout_height="200dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
                 android:background="@color/colorPrimaryDark"
@@ -814,6 +814,37 @@
                          
                 android:textColor="@color/white"
                 android:layout_marginLeft="5dp" />
+                </LinearLayout>
+
+
+
+
+                <LinearLayout
+                    android:id="@+id/llFlip"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal"
+                    android:padding="5dp">
+
+                    <com.airbnb.lottie.LottieAnimationView
+
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        app:lottie_colorFilter="@color/white"
+                        app:lottie_autoPlay="true"
+                        app:lottie_fileName="item.json"
+                        app:lottie_loop="true" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        android:text="Flip View Pager"
+                        android:textStyle="bold"
+                        android:textSize="16dp"
+
+                        android:textColor="@color/white"
+                        android:layout_marginLeft="5dp" />
                 </LinearLayout>
 
                 <!--                <LinearLayout-->
